Switched to Flutterwave, updated register.html and env

--- a/nera-frontend/public/index.html
+++ b/nera-frontend/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NeraInsight | Home</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -60,15 +61,15 @@
     <div class="row">
       <div class="col-md-4">
         <h5>Easy Investment Plans</h5>
-        <p>Start with just ₦2000 and earn daily returns over 7 days.</p>
+        <p>Start from just ₦2,000 and earn up to ₦13,000 in 7 days. Daily payouts guaranteed.</p>
       </div>
       <div class="col-md-4">
         <h5>Referral Rewards</h5>
-        <p>Earn ₦500 + 10% of your referral’s first deposit.</p>
+        <p>Earn  +10% of your referral’s first deposit instantly.</p>
       </div>
       <div class="col-md-4">
         <h5>Daily Check-In Bonus</h5>
-        <p>Earn ₦50 just for logging in every day.</p>
+        <p>Earn ₦50 every day you log in — no strings attached!</p>
       </div>
     </div>
   </section>
@@ -80,19 +81,19 @@
       <div class="row">
         <div class="col-md-3">
           <h6>1. Create Account</h6>
-          <p>Sign up with your Nigerian phone number.</p>
+          <p>Sign up using your Nigerian phone number.</p>
         </div>
         <div class="col-md-3">
           <h6>2. Deposit Funds</h6>
-          <p>Choose from ₦2000, ₦3000, ₦5000 or ₦7500 plans.</p>
+          <p>Choose a plan: ₦2,000 → ₦3,000, ₦3,000 → ₦5,500, ₦5,000 → ₦9,000, or ₦7,500 → ₦13,000.</p>
         </div>
         <div class="col-md-3">
           <h6>3. Invest</h6>
-          <p>Invest and start earning daily returns for 7 days.</p>
+          <p>Start earning daily returns instantly for 7 days.</p>
         </div>
         <div class="col-md-3">
           <h6>4. Withdraw Profits</h6>
-          <p>Withdraw to your bank account every 7 days.</p>
+          <p>Withdraw earnings to your Nigerian bank account every 7 days.</p>
         </div>
       </div>
     </div>
@@ -101,7 +102,10 @@
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2025 NeraInsight. All rights reserved.</p>
-    <p><a href="login.html" class="text-white">Login</a> | <a href="register.html" class="text-white">Register</a></p>
+    <p>
+      <a href="login.html" class="text-white">Login</a> |
+      <a href="register.html" class="text-white">Register</a>
+    </p>
   </footer>
 
   <!-- Bootstrap Scripts -->
