--- a/nera-frontend/public/admin.html
+++ b/nera-frontend/public/admin.html
@@ -43,8 +43,13 @@
   <div class="admin-panel">
     <h3 class="text-center mb-4">Admin Dashboard</h3>
 
+    <!-- 📊 Insights Button -->
+    <div class="text-center mb-4">
+      <a href="admin-insights.html" class="btn btn-primary">📊 View Insights</a>
+    </div>
+
     <!-- 🔄 Manual Top-up -->
-    <div class="mb-5">
+    <div class="mb-4">
       <h5>Manual Top-up</h5>
       <div class="row g-3 align-items-center">
         <div class="col-md-4">
@@ -60,6 +65,13 @@
           <p id="topupMsg" class="mt-2"></p>
         </div>
       </div>
+    </div>
+
+    <!-- 🔁 Update Daily Returns -->
+    <div class="mb-5">
+      <h5>Update Daily Returns</h5>
+      <button class="btn btn-warning" onclick="updateReturns()">Process Daily Returns</button>
+      <p id="returnsMsg" class="mt-2"></p>
     </div>
 
     <!-- 🔔 Top-up Requests -->
@@ -79,19 +91,26 @@
     </table>
 
     <!-- 🏧 Withdrawal Requests -->
-    <h5 class="mt-5">Withdrawal Requests</h5>
-    <table class="table table-bordered">
+    <div class="d-flex justify-content-between align-items-center mt-5">
+      <h5>Withdrawal Requests</h5>
+      <select id="filterSelect" class="form-select w-auto">
+        <option value="all">All</option>
+        <option value="pending">Pending Only</option>
+      </select>
+    </div>
+    <table class="table table-bordered mt-2">
       <thead>
         <tr>
-          <th>User</th>
-          <th>Amount</th>
+          <th>User Phone</th>
+          <th>Amount (₦)</th>
           <th>Bank</th>
           <th>Account</th>
+          <th>Status</th>
           <th>Action</th>
         </tr>
       </thead>
       <tbody id="withdrawalTableBody">
-        <tr><td colspan="5" class="text-center">Loading...</td></tr>
+        <tr><td colspan="6" class="text-center">Loading...</td></tr>
       </tbody>
     </table>
   </div>
@@ -104,13 +123,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
+    const API_BASE = 'https://nerainsight.onrender.com';
     const token = localStorage.getItem('neraToken');
-
     const withdrawalTableBody = document.getElementById('withdrawalTableBody');
     const topupTableBody = document.getElementById('topupTableBody');
 
     async function loadWithdrawals() {
+      const filter = document.getElementById('filterSelect').value;
+
       try {
         const res = await fetch(`${API_BASE}/withdraw/requests`, {
           headers: { 'Authorization': 'Bearer ' + token }
@@ -119,27 +139,38 @@
         const data = await res.json();
         withdrawalTableBody.innerHTML = '';
 
-        if (data.length === 0) {
-          withdrawalTableBody.innerHTML = `<tr><td colspan="5" class="text-center">No requests</td></tr>`;
+        const filtered = filter === 'pending'
+          ? data.filter(req => req.status === 'pending')
+          : data;
+
+        if (filtered.length === 0) {
+          withdrawalTableBody.innerHTML = `<tr><td colspan="6" class="text-center">No withdrawal requests</td></tr>`;
           return;
         }
 
-        data.forEach(req => {
+        filtered.forEach(req => {
+          const isPending = req.status === 'pending';
+          const approveBtn = isPending ? `<button class="btn btn-sm btn-approve me-2" onclick="approveRequest('${req._id}')">Approve</button>` : '';
+          const declineBtn = isPending ? `<button class="btn btn-sm btn-decline" onclick="declineRequest('${req._id}')">Decline</button>` : '';
+          const statusBadge = {
+            approved: '<span class="badge bg-success">APPROVED</span>',
+            pending: '<span class="badge bg-warning text-dark">PENDING</span>',
+            declined: '<span class="badge bg-danger">DECLINED</span>'
+          }[req.status] || req.status.toUpperCase();
+
           const row = document.createElement('tr');
           row.innerHTML = `
             <td>${req.userPhone || 'Unknown'}</td>
             <td>₦${req.amount}</td>
             <td>${req.bankName}</td>
             <td>${req.accountNumber}</td>
-            <td>
-              <button class="btn btn-sm btn-approve me-2" onclick="approveRequest('${req._id}')">Approve</button>
-              <button class="btn btn-sm btn-decline" onclick="declineRequest('${req._id}')">Decline</button>
-            </td>
+            <td>${statusBadge}</td>
+            <td>${approveBtn}${declineBtn}</td>
           `;
           withdrawalTableBody.appendChild(row);
         });
       } catch (err) {
-        withdrawalTableBody.innerHTML = `<tr><td colspan="5" class="text-center text-danger">Error loading withdrawals</td></tr>`;
+        withdrawalTableBody.innerHTML = `<tr><td colspan="6" class="text-center text-danger">Error loading withdrawals</td></tr>`;
       }
     }
 
@@ -151,7 +182,7 @@
           headers: { 'Authorization': 'Bearer ' + token }
         });
         const result = await res.json();
-        alert(result.message || 'Approved');
+        alert(result.message || 'Withdrawal approved');
         loadWithdrawals();
       } catch {
         alert('Error approving withdrawal');
@@ -166,7 +197,7 @@
           headers: { 'Authorization': 'Bearer ' + token }
         });
         const result = await res.json();
-        alert(result.message || 'Declined');
+        alert(result.message || 'Withdrawal declined');
         loadWithdrawals();
       } catch {
         alert('Error declining withdrawal');
@@ -211,7 +242,7 @@
         topupTableBody.innerHTML = '';
 
         if (data.length === 0) {
-          topupTableBody.innerHTML = `<tr><td colspan="4" class="text-center">No requests</td></tr>`;
+          topupTableBody.innerHTML = `<tr><td colspan="4" class="text-center">No top-up requests</td></tr>`;
           return;
         }
 
@@ -263,11 +294,39 @@
       }
     }
 
+    async function updateReturns() {
+      const returnsMsg = document.getElementById('returnsMsg');
+      returnsMsg.textContent = 'Processing...';
+
+      try {
+        const res = await fetch(`${API_BASE}/returns/update-returns`, {
+          method: 'POST',
+          headers: {
+            'Authorization': 'Bearer ' + token,
+            'Content-Type': 'application/json'
+          }
+        });
+
+        const data = await res.json();
+        if (res.ok) {
+          returnsMsg.style.color = 'green';
+          returnsMsg.textContent = `✅ ${data.message || 'Daily returns updated.'} (${data.count || 0} updated)`;
+        } else {
+          returnsMsg.style.color = 'red';
+          returnsMsg.textContent = data.message || 'Something went wrong.';
+        }
+      } catch (err) {
+        returnsMsg.style.color = 'red';
+        returnsMsg.textContent = '❌ Server error';
+      }
+    }
+
     if (!token) {
       window.location.href = 'login.html';
     } else {
       loadWithdrawals();
       loadTopupRequests();
+      document.getElementById('filterSelect').addEventListener('change', loadWithdrawals);
     }
   </script>
 </body>
