--- a/nera-frontend/public/checkin.html
+++ b/nera-frontend/public/checkin.html
@@ -67,11 +67,13 @@
   &copy; 2025 NeraInsight. All rights reserved.
 </footer>
 
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-
 <script>
+  const API_BASE = 'https://nerainsight.onrender.com/api';
   const token = localStorage.getItem('neraToken');
+
   const streakCountEl = document.getElementById('streakCount');
   const lastCheckInEl = document.getElementById('lastCheckIn');
   const walletInfoEl = document.getElementById('walletInfo');
@@ -86,10 +88,11 @@
 
   async function loadCheckInStatus() {
     try {
-      const res = await fetch('http://localhost:5000/api/checkin/status', {
+      const res = await fetch(`${API_BASE}/checkin/status`, {
         headers: { 'Authorization': 'Bearer ' + token }
       });
       const data = await res.json();
+
       if (res.ok) {
         streakCountEl.textContent = data.streak || 0;
         lastCheckInEl.textContent = data.lastCheckIn
@@ -108,8 +111,8 @@
   function launchConfetti() {
     confetti.create(confettiCanvas, { resize: true })({
       particleCount: 120,
-      spread: 100,
-      origin: { y: 0.5 }
+      spread: 120,
+      origin: { y: 0.6 }
     });
   }
 
@@ -117,16 +120,15 @@
     checkInBtn.disabled = true;
     messageEl.textContent = '';
     try {
-      const res = await fetch('http://localhost:5000/api/checkin', {
+      const res = await fetch(`${API_BASE}/checkin`, {
         method: 'POST',
         headers: { 'Authorization': 'Bearer ' + token }
       });
-
       const data = await res.json();
+
       if (res.ok) {
         messageEl.style.color = 'green';
         messageEl.textContent = data.message || 'Check-in successful! ₦50 added.';
-        localStorage.setItem('neraStreak', data.streak);
         launchConfetti();
         loadCheckInStatus();
       } else {
@@ -141,12 +143,6 @@
   });
 
   loadCheckInStatus();
-</script>
-<script>
-  const token = localStorage.getItem('neraToken');
-  if (!token) {
-    window.location.href = 'login.html';
-  }
 </script>
 </body>
 </html>
