--- a/nera-frontend/public/dashboard.html
+++ b/nera-frontend/public/dashboard.html
@@ -9,20 +9,55 @@
     body {
       background-color: #f0f2f5;
       font-family: 'Segoe UI', sans-serif;
+      transition: background-color 0.3s, color 0.3s;
     }
     .card-box {
       border-radius: 16px;
       padding: 20px;
       box-shadow: 0 0 12px rgba(0,0,0,0.05);
       background: white;
+      height: 100%;
+      transition: background 0.3s, color 0.3s;
     }
     .btn-nera {
       background-color: #2a5298;
       color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
     }
     .quick-link a {
       text-decoration: none;
       color: #2a5298;
+    }
+    .spinner-border {
+      width: 1rem;
+      height: 1rem;
+    }
+    @media (max-width: 576px) {
+      .quick-link {
+        flex-direction: column;
+        gap: 10px;
+      }
+    }
+
+    /* Dark Mode Styling */
+    .dark-mode body {
+      background-color: #121212;
+      color: #e0e0e0;
+    }
+    .dark-mode .card-box {
+      background: #1e1e1e;
+      color: #e0e0e0;
+      box-shadow: 0 0 8px rgba(255, 255, 255, 0.05);
+    }
+    .dark-mode .navbar,
+    .dark-mode footer {
+      background-color: #000 !important;
+    }
+    .dark-mode .quick-link a {
+      color: #90caf9;
     }
   </style>
 </head>
@@ -31,8 +66,14 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
     <a class="navbar-brand" href="index.html">₦eraInsight</a>
-    <div class="collapse navbar-collapse">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <button id="darkModeToggle" class="btn btn-sm btn-light me-3">🌙</button>
+        </li>
         <li class="nav-item"><a class="nav-link" href="invest.html">Invest</a></li>
         <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
         <li class="nav-item"><a class="nav-link" href="referral.html">Referral</a></li>
@@ -46,7 +87,7 @@
     <h2 class="text-center mb-4">Welcome to your Dashboard</h2>
 
     <div class="row g-4">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <div class="card-box text-center">
           <h6>Wallet Balance</h6>
           <h3 id="walletBalance">₦0</h3>
@@ -54,7 +95,7 @@
         </div>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <div class="card-box text-center">
           <h6>Investment Status</h6>
           <p id="investmentStatus" class="mb-1">Loading...</p>
@@ -62,11 +103,14 @@
         </div>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card-box text-center">
           <h6>Daily Check-In</h6>
           <p>Earn ₦50 every day</p>
-          <button id="checkInBtn" class="btn btn-nera btn-sm">Check In</button>
+          <button id="checkInBtn" class="btn btn-nera btn-sm">
+            <span class="default-text">Check In</span>
+            <span class="spinner d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span></span>
+          </button>
           <p id="checkInMessage" class="mt-2"></p>
         </div>
       </div>
@@ -74,7 +118,7 @@
 
     <div class="text-center mt-5">
       <h5>Quick Links</h5>
-      <div class="d-flex justify-content-center gap-4 mt-3 quick-link">
+      <div class="d-flex justify-content-center gap-4 mt-3 quick-link flex-wrap">
         <a href="invest.html">Invest</a>
         <a href="withdraw.html">Withdraw</a>
         <a href="referral.html">Referral</a>
@@ -88,10 +132,10 @@
     &copy; 2025 NeraInsight. All rights reserved.
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api'; // ✅ Make sure this is your Termux IP
+    const API_BASE = 'https://nerainsight.onrender.com/api';
     const token = localStorage.getItem('neraToken');
 
     const walletBalanceEl = document.getElementById('walletBalance');
@@ -100,58 +144,69 @@
     const checkInBtn = document.getElementById('checkInBtn');
     const checkInMessage = document.getElementById('checkInMessage');
     const logoutBtn = document.getElementById('logoutBtn');
+    const spinner = checkInBtn.querySelector('.spinner');
+    const defaultText = checkInBtn.querySelector('.default-text');
+    const toggleBtn = document.getElementById('darkModeToggle');
 
     if (!token) {
       alert('You are not logged in. Redirecting to login page.');
       window.location.href = 'login.html';
     }
 
-    // Load user profile
+    // Load profile
     async function loadProfile() {
       try {
         const res = await fetch(`${API_BASE}/user/profile`, {
           headers: { 'Authorization': 'Bearer ' + token }
         });
+
         if (!res.ok) throw new Error('Failed to fetch profile');
         const data = await res.json();
 
         walletBalanceEl.textContent = `₦${data.wallet.toLocaleString()}`;
         bonusInfoEl.textContent = data.bonusUnlocked 
-          ? '(Bonus unlocked)' 
-          : '(Includes ₦2k signup bonus — locked until deposit)';
-        
-        investmentStatusEl.textContent = data.activeInvestment 
-          ? `Active investment: ₦${data.activeInvestment.amount.toLocaleString()}`
+          ? '(₦2,000 bonus unlocked)' 
+          : '(₦2,000 signup bonus — locked until first deposit)';
+        investmentStatusEl.textContent = data.activeInvestment
+          ? `Active: ₦${data.activeInvestment.amount.toLocaleString()}`
           : 'No active investment';
 
       } catch (err) {
-        alert('Session expired or error occurred. Please login again.');
+        alert('Session expired or an error occurred. Please login again.');
         localStorage.removeItem('neraToken');
         window.location.href = 'login.html';
       }
     }
 
-    // Check-in action
+    // Check-in
     checkInBtn.addEventListener('click', async () => {
       checkInMessage.textContent = '';
+      checkInBtn.disabled = true;
+      spinner.classList.remove('d-none');
+      defaultText.textContent = 'Checking...';
+
       try {
         const res = await fetch(`${API_BASE}/checkin`, {
           method: 'POST',
           headers: { 'Authorization': 'Bearer ' + token }
         });
-
         const data = await res.json();
+
         if (res.ok) {
           checkInMessage.style.color = 'green';
-          checkInMessage.textContent = data.message || 'Checked in successfully! You earned ₦50.';
-          loadProfile(); // Refresh wallet
+          checkInMessage.textContent = data.message || 'Check-in successful! You earned ₦50.';
+          loadProfile();
         } else {
           checkInMessage.style.color = 'red';
           checkInMessage.textContent = data.message || 'Check-in failed.';
         }
       } catch {
         checkInMessage.style.color = 'red';
-        checkInMessage.textContent = 'Network error, try again.';
+        checkInMessage.textContent = 'Network error. Please try again.';
+      } finally {
+        spinner.classList.add('d-none');
+        defaultText.textContent = 'Check In';
+        checkInBtn.disabled = false;
       }
     });
 
@@ -163,14 +218,28 @@
       window.location.href = 'login.html';
     });
 
-    // Auto-load dashboard
+    // Dark Mode Logic
+    function applyDarkMode(isDark) {
+      if (isDark) {
+        document.documentElement.classList.add('dark-mode');
+        toggleBtn.textContent = '☀️';
+      } else {
+        document.documentElement.classList.remove('dark-mode');
+        toggleBtn.textContent = '🌙';
+      }
+    }
+
+    const savedMode = localStorage.getItem('neraDarkMode') === 'true';
+    applyDarkMode(savedMode);
+
+    toggleBtn.addEventListener('click', () => {
+      const isDark = document.documentElement.classList.toggle('dark-mode');
+      localStorage.setItem('neraDarkMode', isDark);
+      toggleBtn.textContent = isDark ? '☀️' : '🌙';
+    });
+
+    // Init
     loadProfile();
   </script>
-<script>
-  const token = localStorage.getItem('neraToken');
-  if (!token) {
-    window.location.href = 'login.html';
-  }
-</script>
 </body>
 </html>
