--- a/nera-frontend/public/insight.html
+++ b/nera-frontend/public/insight.html
@@ -3,48 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Insights | NeraInsight</title>
+  <title>My Insights | NeraInsight</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #f0f2f5;
       font-family: 'Segoe UI', sans-serif;
     }
-    .card-box {
+    .insight-card {
       border-radius: 16px;
-      padding: 20px;
+      padding: 25px;
       background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      box-shadow: 0 0 12px rgba(0,0,0,0.08);
+      text-align: center;
+      height: 100%;
+    }
+    .insight-title {
+      font-size: 18px;
+      color: #2a5298;
+      margin-bottom: 8px;
+    }
+    .insight-value {
+      font-size: 28px;
+      font-weight: bold;
+      color: #111;
+    }
+    @media (max-width: 768px) {
+      .insight-value {
+        font-size: 24px;
+      }
     }
   </style>
 </head>
 <body>
 
+  <!-- Token Check -->
+  <script>
+    const token = localStorage.getItem('neraToken');
+    const user = JSON.parse(localStorage.getItem('neraUser'));
+    if (!token || !user) {
+      alert('⚠️ You are not logged in. Redirecting...');
+      window.location.href = 'login.html';
+    }
+  </script>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
     <a class="navbar-brand" href="index.html">₦eraInsight</a>
-    <div class="collapse navbar-collapse">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
         <li class="nav-item"><a class="nav-link" href="invest.html">Invest</a></li>
         <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
         <li class="nav-item"><a class="nav-link" href="referral.html">Referral</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" id="logoutBtn">Logout</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- Content -->
+  <!-- Insight Section -->
   <div class="container my-5">
-    <h2 class="text-center mb-4">Your Investment Insights</h2>
-
-    <div class="card-box">
-      <h5>User Info</h5>
-      <p><strong>Phone:</strong> <span id="phone"></span></p>
-      <p><strong>Wallet Balance:</strong> ₦<span id="wallet"></span></p>
-      <p><strong>Referral Code:</strong> <span id="referralCode"></span></p>
-      <p><strong>Bonus Status:</strong> <span id="bonusStatus"></span></p>
-      <p><strong>Active Investment:</strong> <span id="activeInvestment"></span></p>
+    <h2 class="text-center mb-4">📊 Your Investment Insights</h2>
+    <div class="row g-4">
+      <div class="col-md-4 col-sm-6 col-12">
+        <div class="insight-card">
+          <div class="insight-title">Total Investments</div>
+          <div class="insight-value" id="total">0</div>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 col-12">
+        <div class="insight-card">
+          <div class="insight-title">Active Packages</div>
+          <div class="insight-value" id="active">0</div>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 col-12">
+        <div class="insight-card">
+          <div class="insight-title">Total Profit</div>
+          <div class="insight-value" id="profit">₦0</div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -53,56 +93,30 @@
     &copy; 2025 NeraInsight. All rights reserved.
   </footer>
 
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
-    const token = localStorage.getItem('neraToken');
-
-    if (!token) {
-      alert('You are not logged in. Redirecting to login.');
-      window.location.href = 'login.html';
-    }
-
-    async function loadUserInsights() {
-      try {
-        const res = await fetch(`${API_BASE}/user/profile`, {
-          headers: {
-            'Authorization': 'Bearer ' + token
-          }
-        });
-
-        if (!res.ok) throw new Error('Failed to load');
-
-        const data = await res.json();
-
-        document.getElementById('phone').textContent = data.phone;
-        document.getElementById('wallet').textContent = data.wallet;
-        document.getElementById('referralCode').textContent = data.referralCode || 'Not available';
-        document.getElementById('bonusStatus').textContent = data.bonusUnlocked ? 'Unlocked' : 'Locked';
-        document.getElementById('activeInvestment').textContent = data.activeInvestment 
-          ? `₦${data.activeInvestment.amount}` 
-          : 'No active investment';
-
-      } catch (err) {
-        alert('Session expired or error occurred. Please log in again');
-        localStorage.removeItem('neraToken');
-        window.location.href = 'login.html';
+    fetch('https://nerainsight.onrender.com/api/insights', {
+      method: 'GET',
+      headers: {
+        'Authorization': 'Bearer ' + token
       }
-    }
-
-    // Logout logic
-    document.getElementById('logoutBtn').addEventListener('click', () => {
-      localStorage.removeItem('neraToken');
-      localStorage.removeItem('neraUser');
+    })
+    .then(res => {
+      if (!res.ok) throw new Error();
+      return res.json();
+    })
+    .then(data => {
+      document.getElementById('total').textContent = data.totalInvestments;
+      document.getElementById('active').textContent = data.activePackages;
+      document.getElementById('profit').textContent = '₦' + data.totalProfit.toLocaleString();
+    })
+    .catch(() => {
+      alert('⚠️ Session expired. Please log in again.');
+      localStorage.clear();
       window.location.href = 'login.html';
     });
-
-    loadUserInsights();
   </script>
-<script>
-  const token = localStorage.getItem('neraToken');
-  if (!token) {
-    window.location.href = 'login.html';
-  }
-</script>
+
 </body>
 </html>
